--- a/luigi.conf
+++ b/luigi.conf
@@ -1,3 +1,6 @@
+[core]
+logging_conf_file: /etc/luigi/logging.conf
+
 [scheduler]
 record_task_history: True
 state-path: /luigi/state/luigi-state.pickle
