--- a/logging.conf
+++ b/logging.conf
@@ -1,8 +1,33 @@
 [loggers]
-keys=root
+keys=root,tornado,client,scheduler,server
 
-[handlers]
-keys=console
+[logger_root]
+level=DEBUG
+handlers=console
+
+[logger_client]
+level=DEBUG
+handlers=console
+qualname=luigi-interface
+propagate=0
+
+[logger_server]
+level=DEBUG
+handlers=console
+qualname=luigi.server
+propagate=0
+
+[logger_scheduler]
+level=DEBUG
+handlers=console
+qualname=luigi.scheduler
+propagate=0
+
+[logger_tornado]
+level=DEBUG
+handlers=warnconsole
+qualname=tornado
+propagate=0
 
 [formatters]
 keys=detail
@@ -11,11 +36,17 @@ keys=detail
 class=logging.Formatter
 format=%(asctime)s %(name)-15s %(levelname)-8s %(message)s
 
+[handlers]
+keys=console,warnconsole
+
 [handler_console]
+level=INFO
 class=StreamHandler
 args=(sys.stdout,)
 formatter=detail
 
-[logger_root]
-level=INFO
-handlers=console
+[handler_warnconsole]
+level=WARNING
+class=StreamHandler
+args=(sys.stdout,)
+formatter=detail
