fix volumes in dockerfiles

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -32,7 +32,7 @@ RUN apk add --no-cache --virtual .build-deps \
 
 COPY logging.conf ${LUIGI_CONFIG_DIR}
 COPY luigi.conf ${LUIGI_CONFIG_DIR}
-VOLUME [${LUIGI_CONFIG_DIR}, ${LUIGI_STATE_DIR}]
+VOLUME ["${LUIGI_CONFIG_DIR}", "${LUIGI_STATE_DIR}"]
 
 EXPOSE 8082/TCP
 
