Add prometheus_client to support metrics server on scheduler

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -29,6 +29,7 @@ RUN apk add --no-cache --virtual .build-deps \
       psycopg2 \
       mysql-connector-python \
       mysqlclient \
+      prometheus_client \
       && \
     apk add --virtual \
       mariadb-client-libs \
