--- a/tests/maria.conf
+++ b/tests/maria.conf
@@ -4,6 +4,7 @@ logging_conf_file: /etc/luigi/logging.conf
 [scheduler]
 record_task_history: True
 state-path: /luigi/state/luigi-state.pickle
+metrics_collector: prometheus
 
 [task_history]
 db_connection: mysql://luigid:luigid@maria:3306/luigid
