--- a/tests/pgsql.conf
+++ b/tests/pgsql.conf
@@ -4,6 +4,7 @@ logging_conf_file: /etc/luigi/logging.conf
 [scheduler]
 record_task_history: True
 state-path: /luigi/state/luigi-state.pickle
+metrics_collector: prometheus
 
 [task_history]
 db_connection: postgresql://luigid:luigid@pgsql:5432/luigid
