--- a/luigi.conf
+++ b/luigi.conf
@@ -3,7 +3,7 @@ logging_conf_file: /etc/luigi/logging.conf
 
 [scheduler]
 record_task_history: True
-state-path: /luigi/state/luigi-state.pickle
+state_path: /luigi/state/luigi-state.pickle
 
 [task_history]
 db_connection: sqlite:////luigi/state/luigi-task-history.db
