--- a/tests/maria.conf
+++ b/tests/maria.conf
@@ -3,7 +3,7 @@ logging_conf_file: /etc/luigi/logging.conf
 
 [scheduler]
 record_task_history: True
-state-path: /luigi/state/luigi-state.pickle
+state_path: /luigi/state/luigi-state.pickle
 metrics_collector: prometheus
 
 [task_history]
